# poly66_Python_Backend

./: .env.example  .gitignore  CLAUDE.MD  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  run_api_tests.py
Planning/: 参考资料_单账本撮合引擎设计方案_v1.md  预测市场平台_完整实施计划_v4_Python.md
Planning/AMM_Bot_Design/: 01_AMM_数据字典与状态机规范_v1.0.md  02_AMM_接口与事件流契约_v1.0.md  03_AMM_配置管理与调参手册_v1.0.md  AMM 自动做市商机器人具体模块设计-v4.md  做市商机器人设计：冷启动与风险补贴设计整体思路.md
Planning/Detail_Design/: 01_全局约定与数据库设计.md  02_API接口契约.md  03_撮合引擎与清算流程设计.md  04_WAL预写日志与故障恢复设计.md  05_POC_测试撮合系统_API.md  README.md
Planning/Implementation/: 2026-02-20-pm-account-design.md  2026-02-20-pm-account-plan.md  2026-02-20-pm-gateway-design.md  2026-02-20-pm-gateway-plan.md  2026-02-20-pm-market-design.md  2026-02-20-pm-market-plan.md  2026-02-20-scaffolding-design.md  2026-02-20-scaffolding-plan.md  2026-02-21-api-completion-plan.md  2026-02-21-code-review.md  2026-02-21-pm-order-design.md  2026-02-21-pm-order-plan.md  2026-02-22-api-test-results.md  2026-02-22-frontend-test-plan.md  2026-02-28-amm-bot-design.md  2026-02-28-amm-bot-plan.md  2026-02-28-amm-prerequisites-design.md  2026-02-28-amm-prerequisites-plan.md
Planning/archive/: 预测市场平台_完整实施计划.md  预测市场平台_完整实施计划_v2_Python.md  预测市场平台_完整实施计划_v3_Python.md
alembic/: env.py
alembic/versions/: 001_create_common_functions.py  002_create_users.py  003_create_accounts.py  004_create_markets.py  005_create_orders.py  006_create_trades.py  007_create_positions.py  (+8 more)
config/: __init__.py  settings.py
src/: main.py
tests/: conftest.py
(+135 files in other folders)
