[project]
name = "prediction-market"
version = "0.1.0"
description = "Binary Prediction Market Platform — Single-Ledger Matching Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "uvloop>=0.19",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "redis>=5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
